subo mi mision de la pagina de pasteles

--- a/index.html
+++ b/index.html
@@ -1,16 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Responsive Cake webpage</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/7cb35e1e2a.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Cake webpage</title>
     <!-- Add a link to your css file here -->
-</head>
+  </head>
 
-<body>
+  <body>
+    <div class="navegador">
+      <nav class="menu">
+        <input type="checkbox" id="menu" />
+        <label for="menu"><i class="fa-solid fa-bars"></i></label>
+        <ul>
+            <li>Quienes somos</li>
+          <li>Conoce nuestras instalaciones</li>
+          <li>Mira nuestras variedades</li>
+          <li>Programa tu pedido</li>
+          <li>Reservas y descuentos</li>
+        </ul>
+      </nav>
+      <h1 class="slogan">Dejate enamorar por nuestros sabores</h1>
+    </div>
+    <main>
+        <h2>Bienvenidos</h2>
+
+        <div class="bienvenida">
+          <p class="texto">
+            ¡Esta es nuestra pasteleria! Con más de 50 años de experiencia en el rubro,
+             nos esforzamos cada día para brindarte la mejor calidad en nuestros productos.
+              Queremos que formes parte de nuestra familia y, por eso, te ofrecemos descuentos
+               especiales en ocasiones especiales como cumpleaños, bautismos y bodas. Trabajamos
+                con materias primas de excelente calidad y ponemos en cada uno de nuestros
+                 productos la pasión y el amor necesarios para llegar a cada hogar de Manresa.
+                  No te quedes con las ganas de probar nuestras delicias, ¡no te arrepentirás!
+          </p>
+          <img
+            src="https://media.istockphoto.com/id/930090090/es/foto/mujer-joven-alegre-con-pasteles-caseros-en-caf%C3%A9-sonriendo.jpg?s=612x612&w=0&k=20&c=Ry1diQYR2k21HUkC2-N5_FTCyB4RfO8LBEsYiruRX8M="
+            alt="señora teniendo un pastel"
+          />
+        </div>
+    </main>
+   
+
     <!-- Add your HTML here -->
-</body>
-
+        
+    <section class="productos">
+        <h3>Nuestros productos:</h3>
+        <div class="contenedor">
+    <div class="tarjeta">
+      <img
+        src="https://media.istockphoto.com/id/1329587431/es/foto/imagen-de-gateau-de-la-selva-negra-en-rodajas-en-un-soporte-de-pastel-con-muselina-gris.jpg?b=1&s=170667a&w=0&k=20&c=XW3nbBRqBosQggCpIh2GTLh3POcIjNTp9AM-GfwMfaI="
+        alt=""
+      />
+      <p class="negrita">Rojiza</p>
+      <p class="ingredientes">Ingredientes: cerezas y crema acompañada de un biscochuelo recien sacado del horno</p>
+      <p class="precio">30 Euros</p>
+    </div>
+    <div class="tarjeta">
+      <img
+        src="https://media.istockphoto.com/id/117461345/es/foto/pastel-de-terciopelo-rojo.jpg?s=612x612&w=0&k=20&c=1Oyp-OJFFVOcfrVBmxjdld0q6Ir_AFZYpYBKjyn04yA="
+        alt=""
+      />
+      <p class="negrita">Pasteleta</p>
+      <p class="ingredientes">Ingredientes: frutillas, crema y un biscochuelo a base de frutas rojas</p>
+      <p class="precio">40 Euros</p>
+    </div>
+    <div class="tarjeta">
+      <img
+        src="https://media.istockphoto.com/id/1400227319/es/foto/delicioso-pastel-de-chocolate-cubierto-con-crema-de-mascarpone-y-caramelo-salado-decorado-con.jpg?s=612x612&w=0&k=20&c=4CHvwv_1vaimrAa3-UYEIQh9bcfglzomtGbYPBmRsVI="
+        alt=""
+      />
+      <p class="negrita">BonosAires</p>
+      <p class="ingredientes">Ingredientes:chocolate semi-amargo,caramelo, biscochuelo de vainilla y crema Argentina</p>
+      <p class="precio">30 Euros</p>
+    </div>
+    <div class="tarjeta">
+      <img
+        src="https://media.istockphoto.com/id/1360816924/es/foto/pastel-de-tronco-de-navidad-tradicional.jpg?b=1&s=170667a&w=0&k=20&c=UWinFwR0pAQvLTPtgJg_xdYcm4nDHlDqfVNCfNbbOKI="
+        alt=""
+      />
+      <p class="negrita">Rama de suegrs</p>
+      <p class="ingredientes">Ingredientes: pionono de vainilla, cobertura de chocolate y crema americana</p>
+      <p class="precio">20 Euros</p>
+    </div>
+    <div class="tarjeta">
+      <img
+        src="https://media.istockphoto.com/id/1370520449/es/foto/rebanada-de-pastel-de-chocolate-con-glaseado.jpg?b=1&s=170667a&w=0&k=20&c=fcEAb--rMgmIIaN8eTS9L3U09owD1I4RNTqe2yRg2AM="
+        alt=""
+      />
+      <p class="negrita">Brownoneta</p>
+      <p class="ingredientes">Ingrecientes:brownie extra chocolate y dulce de leche argetino</p>
+      <p class="precio">30 Euros</p>
+    </div>
+    <div class="tarjeta">
+        <img
+          src="https://media.istockphoto.com/id/1400227319/es/foto/delicioso-pastel-de-chocolate-cubierto-con-crema-de-mascarpone-y-caramelo-salado-decorado-con.jpg?s=612x612&w=0&k=20&c=4CHvwv_1vaimrAa3-UYEIQh9bcfglzomtGbYPBmRsVI="
+          alt=""
+        />
+        <p class="negrita">BonosAires</p>
+        <p class="ingredientes">Ingredientes:chocolate semi-amargo,caramelo, biscochuelo de vainilla y crema Argentina</p>
+        <p class="precio">30 Euros</p>
+      </div>
+    </div>
+  </section>  
+  </body>
+  <footer>
+    <div class="footer-container">
+        <div class="footer-contacto">
+          <h4>Te esperamos</h4>
+          <p>Dirección: Carrer Nou 30, Manresa-Barcelona</p>
+          <p>Teléfono: 623-456-7890</p>
+          <p>Email: Saboresnuestros@gmail.com</p>
+        </div>
+        
+      </div>
+  </footer>
 </html>
